# python-c-extension-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment-prod.yml  environment.yml  pymake.bat  pymake.sh  pymakefile.py  pyproject.toml  pytest.ini  ruff.toml
docs/: development_setup.md
python_c_ext/: __init__.py  _ext.pyi  xyz_utils.py
src/: Atom.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Molecule.cpp  Molecule.hpp  ext.cpp  ext.hpp
tests/: test_xyz_parser.py
